--- a/photos.css
+++ b/photos.css
@@ -1,7 +1,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-image: url(background2.svg);
+  background-image: url(background.svg);
   background-size: cover;
   background-attachment: fixed;
   margin: 0rem;
@@ -79,14 +79,14 @@ body.menu-toggled > .meta-link > span {
 }
 
 #segment-indicator {
-  position: fixed;
+  
   align-items: center;
   justify-content: center;
   display: flex;
   gap: 10px;
-  bottom: 15px;
   margin-left:57px;
-
+  margin-right: 57px;
+margin-top: 760px;
 
 }
 
