--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 150px;
+  margin-top: 60px;
 }
 
 .intro {
@@ -117,10 +117,15 @@ nav {
 /* Typing animation for title */
 
 #aboutMeContainer {
-  min-height: 850px;
+  min-height: 650px;
   /* background-image: url(background2.svg);
   background-size: cover;
   background-repeat: no-repeat; */
+}
+
+#headshot{
+  width: 400px;
+  margin-top: 50px;
 }
 
 .aboutMe {
@@ -128,6 +133,8 @@ nav {
   justify-content: space-evenly;
   align-items: center;
   margin-bottom: 150px;
+
+  margin-top: 100px;
 }
 
 .aboutMeText {
