--- a/style.css
+++ b/style.css
@@ -213,10 +213,10 @@ nav {
 
 .projectCardContainer {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   gap: 60px;
-  margin-top: 100px;
+  margin-top: 30px;
 }
 
 .viewMoreButtonContainer {
