update font path

--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ body {
 
 @font-face {
   font-family: "Handjet";
-  src: url("/fonts/Handjet-Regular.ttf") format("truetype");
+  src: url("./fonts/Handjet-Regular.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Handjet-light";
-  src: url("/fonts/Handjet-Light.ttf") format("truetype");
+  src: url("./fonts/Handjet-Light.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
